--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "materialize-css": "^1.0.0-rc.2",
     "vue": "^3.2.13"
   },
